<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/background"
    android:padding="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/navigation_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_title"
                android:textSize="24sp"
                android:fontFamily="@font/regularfirasans"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="100dp"/>
        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_closed"
            android:textSize="17sp"
            android:fontFamily="@font/regularfirasans"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/current_points"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/white"
            app:cardCornerRadius="10dp"
            android:padding="6dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="6dp">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/current_points"
                    android:textSize="18sp"
                    android:fontFamily="@font/regularfirasans"
                    android:textColor="@color/black" />
                <Button
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/check"
                    android:textColor="@color/black"
                    android:fontFamily="@font/mediumfirasans"
                    android:background="@drawable/btnstyle"
                    android:layout_gravity="center" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/internet_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="10dp"
            android:layout_margin="6dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/megabites"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:fontFamily="@font/boldfirasans"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_horizontal_picker"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:clipToPadding="false" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/selected_item_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:textSize="18sp"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="баллов"
                        android:textSize="18sp"
                        android:layout_gravity="center"/>

                </LinearLayout>
                <Button
                    android:id="@+id/changeToMB_btn"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:text="Oбменять"
                    android:textColor="@color/black"
                    android:fontFamily="@font/mediumfirasans"
                    android:layout_gravity="center" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</ScrollView>